# apps/api/src/modules/webhooks/webhooks.module.ts
@@ -1,0 +1,8 @@
+import { Module } from '@nestjs/common';
+
+import { WebhookTestController } from './webhook-test.controller.js';
+
+@Module({
+  controllers: [WebhookTestController],
+})
+export class WebhooksModule {}
